--- a/index.html
+++ b/index.html
@@ -33,20 +33,6 @@
 
   <main>
 
-    <p id="1000"></p>
-    <br>
-    <p id="1001"></p>
-    <br>
-    <p id="1002"></p>
-    <br>
-    <p id="1003"></p>
-    <br>
-    <p id="1004"></p>
-    <br>
-    <p id="1005"></p>
-    <br>
-    <p id="1006"></p>
-    <br>
 
 
   </main>
@@ -75,7 +61,10 @@
     </div>
   </footer>
 
-  <script src="./js/app.js"></script>
+  <script src="./js/constructor .js"></script>
+
+
+
 
 
 </body>
